--- a/index.html
+++ b/index.html
@@ -67,19 +67,11 @@
 </head>
 <body>
     <div id="wrapper">
-        <h1>WWA Phoenix</h1>
-        <p class="important">javascript疑似スキーム(javascript:から始まるアドレスみたいなやつ)からのJavaScript実行を認めていないブラウザ(Safariなど)ではご利用になれません。現在対応策を検討中です。</p>
-        <p class="important">ブラウザ拡張版も開発中です。</p>
-        <p class="important">効果音は、WWAデフォルトのものに置換されてしまいます。au形式の音が再生できないための問題です。申し訳ございません。</p>
-        <p class="important">Webkit/Blink系ブラウザ(Chrome, Safari, Opera)では、一部のGIF画像の描画に失敗するようです（ブラウザの仕様と思われます）。失敗した場合はFirefoxやMicrosoft Edgeをご利用ください。</p>
-	<h2>WWA Phoenixとは</h2>
-	<p>WWA Phoenixは、Java版WWAを<a href="../">WWA Wing</a>に置き換えるブックマークレットです。下記の文字列をブックマークのURL欄に打ち込み、ブックマークに追加してください。
-	そして、Java版WWAのあるページに移動し、そのブックマークを選択してください。すると...?</p>
-	<p>ブックマークが使えない場合には、Java版WWAのあるページに移動し、直接URLバーに下記を入力してください。その場合は、冒頭の「javascript:」が消えてしまうことがあるので、消えてしまった場合は追加してください。</p>
-	<textarea rows="10" cols="100" readonly="true" onfocus="this.select();">javascript:if(0<frames.length){for(var i=0;i<frames.length;i++) {try {if(0<frames[i].document.getElementsByTagName("applet").length){var a=confirm(frames[i].location.href+"\nでappletを検出。移動しますか?(移動後再度実行してください)\n");if(!0===a){location.href=frames[i].location.href;break}}}catch(e){}}}main(window);function main(c){c.wwap_mode=!0;c.external_script_inject_mode=!0;var b=c.document.createElement("link");b.rel="stylesheet";b.href="https://wwaphoenix.github.io/wwa.css";c.document.getElementsByTagName("head")[0].appendChild(b);c=c.document.getElementsByTagName("applet");if(0<c.length)for(b=0;b<c.length;b++)isWWA(c[b])&&replaceApplet(c[b])}function isWWA(c){return"WWA.class"===c.getAttribute("code")||"WWAX.class"===c.getAttribute("code")}function replaceApplet(c){var b=c.parentElement;b.removeChild(c);var d=document.createElement("div");c=getMapDataFileName(c);d.setAttribute("id","wwa-wrapper");d.classList.add("wwa-size-box");d.setAttribute("data-wwa-mapdata",c);d.setAttribute("data-wwa-loader","https://wwaphoenix.github.io/wwaload.js");c=confirm("URLゲートを有効にしますか?\n(フレームでBGMを再生するWWAではキャンセルを選んでください)");d.setAttribute("data-wwa-urlgate-enable",c);b.insertBefore(d,b.firstChild);b=document.createElement("script");b.src="https://wwaphoenix.github.io/audio/audio.min.js";b.charset="UTF-8";document.getElementsByTagName("head")[0].appendChild(b);b=document.createElement("script");b.src="https://wwaphoenix.github.io/wwaload.noworker.js";b.setAttribute("id","wwaloader-ex");b.charset="UTF-8";document.getElementsByTagName("head")[0].appendChild(b);b=document.createElement("script");b.src="https://wwaphoenix.github.io/wwa.js";b.charset="UTF-8";document.getElementsByTagName("head")[0].appendChild(b)}function getMapDataFileName(c){for(var b=0;b<c.children.length;b++)if("param"===c.children[b].tagName.toLowerCase()){var d=c.children[b].getAttribute("name"),d=d.toLowerCase();if(null!==d&&"parammapname"===d&&(d=c.children[b].getAttribute("value"),null!==d))return d}throw Error("no mapfile detected.");}void 0;</textarea>
+        <h1>WWA Phoenix 開発用ページ</h1>
+        
+	WWA Phoenix は <a href="http://wwawing.com/wwap/">http://wwawing.com/wwap/</a> から入手できます。
 
-
-	<p> &quot;<a href="http://wwawing.com/">WWA Wing</a>&quot; &copy;2013-2015 Project Wing/Matsuyuki(rmn.)</p>
+	<p> &quot;<a href="http://wwawing.com/">WWA Wing</a>&quot; &copy;2013-2016 WWA Wing Team</p>
         </div>
     </div>
 </body>
