--- a/beta/manual.html
+++ b/beta/manual.html
@@ -100,7 +100,7 @@
                     <dt><code>data-wwa-audio-dir</code>属性</dt>
                     <dd>audio.min.jsと効果音ファイルが入っているフォルダを指定できます。ここを変更した場合は, script要素で読みだすaudio.min.jsのパスも変更してください。
                     指定しなかった場合は<code>./audio/</code>になります。</dd>
-                    <dt><code>data-classic-mode-enable</code>属性</dt>
+                    <dt><code>data-wwa-classic-mode-enable</code>属性</dt>
                     <dd><code>true</code>を指定すると、本家と類似した挙動で動作します(詳細は後述)。
                     指定しなかった場合は<code>false</code>になります。</dd>
                 </dl>
@@ -119,7 +119,7 @@
                     <li>物体ジャンプゲートから物体ジャンプゲートにジャンプしたときのパーツメッセージ表示優先順位</li>
                     <li>ランダム選択パーツ</li>
                 </ul>
-                <p>下記は<code>data-classic-mode-enable</code>を<code>false</code>した場合に、異なる挙動をします。</p>
+                <p>下記は<code>data-wwa-classic-mode-enable</code>を<code>false</code>した場合に、異なる挙動をします。</p>
                 <ul>
                     <li>メッセージ表示中の物体パーツのアニメーション</li>
                 </ul>
@@ -129,7 +129,8 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
-                    <h3>W3.15bからW3.15cβ1への変更点</h3>
+                    <h3>W3.15bからW3.15cβ2への変更点</h3>
+                    <li>WWA PhoenixのWelcome To表示がクラシックになっていない問題を修正(W3.15cβ2)</li>
                     <li>wwa_classic.cssを追加 (W3.15cβ1)</li>
                     <li>マップデータバージョンが3.0以下の場合 (作成ツールが3.02c以下で作成した場合)、追尾/逃げる属性の挙動を当時のWWAに合わせる (W3.15cβ1)</li>
                     <li>一部のシステムメッセージを本家準拠に変更(W3.15cβ1)</li>
