--- a/index.html
+++ b/index.html
@@ -69,22 +69,61 @@
     <div id="wrapper">
         <h1>WWA Phoenix</h1>
         <p class="important">WWA Phoenixは、2019年4月30日をもちまして更新を終了させて頂きました。なお、引き続きご利用になれます。</p>
+        <p class="important">このページの内容は、PCからの利用を前提としています。スマートフォン・タブレットなどでの利用は想定しておりませんのでご注意願います。</p>
         <p class="important">javascript疑似スキーム(javascript:から始まるアドレスみたいなやつ)からのJavaScript実行を認めていないブラウザ(Safariなど)ではご利用になれません。</p>
 	<h2>WWA Phoenixとは</h2>
-	<p>WWA Phoenixは、Java版WWAを<a href="../">WWA Wing</a>に置き換えるブックマークレットです。下記の文字列をブックマークのURL欄に打ち込み、ブックマークに追加してください。
-	そして、Java版WWAのあるページに移動し、そのブックマークを選択してください。すると...?</p>
-	<p>ブックマークが使えない場合には、Java版WWAのあるページに移動し、直接URLバーに下記を入力してください。その場合は、冒頭の「javascript:」が消えてしまうことがあるので、消えてしまった場合は追加してください。</p>
+	<p>WWA Phoenixは、Java版WWAを<a href="https://wwawing.com/">WWA Wing</a>に置き換えるブックマークレットです。テキストボックス内の文字列をブックマークのURL欄に打ち込み、ブックマークに追加してください。Java版WWAが設置されているページでブックマークを選択するとWWAが起動します。</p>
+	<p>ブックマークが使えない場合には、Java版WWAのあるページに移動し、直接URLバーにテキストボックスの内容をを入力してください。その場合は、冒頭の「javascript:」が消えてしまうことがあるので、消えてしまった場合は追加してください。</p>
+	<p>詳しい動かし方は「<a href="#usage">基本的な使い方</a>」で解説しています。</p>
 	<h2>WWA Phoenix (WWA Wing v3.1.8相当の機能が利用できます)</h2>
         <p>作成ツール3.02c以下のマップデータを読み込んだ時に「プレイヤー追尾」「逃げる」の挙動は当時のJava版の挙動と同じになります。</p>
         <p>効果音は、WWAデフォルトのものに置換されてしまいます。au形式の音が再生できないための問題です。申し訳ございません。</p>
-        <p>Webkit/Blink系ブラウザ(Chrome, Safari, Opera)では、一部のGIF画像の描画に失敗するようです（ブラウザの仕様と思われます）。失敗した場合はFirefoxなどを利用してください。</p>
+				<p>Webkit/Blink系ブラウザ(Chrome, Safari, Opera)では、一部のGIF画像の描画に失敗するようです（ブラウザの仕様と思われます）。失敗した場合はFirefoxなどを利用してください。</p>
+				<p>WWA Wing v3.1.8より後に追加された機能は対応しておりません。Quick Saveは1つのみですし、ブラウザを閉じるとその内容は消えてしまいます。予めご了承ください。</p>
 	<textarea rows="10" cols="100" readonly="true" onfocus="this.select();">javascript:var rt="https://wwaphoenix.github.io/";if(0<frames.length){for(var i=0;i<frames.length;i++) {try {if(0<frames[i].document.getElementsByTagName("applet").length){var a=confirm(frames[i].location.href+"\nでappletを検出。移動しますか?(移動後再度実行してください)\n");if(!0===a){location.href=frames[i].location.href;break}}}catch(e){}}}main(window);function main(c){c.wwap_mode=!0;c.external_script_inject_mode=!0;var b=c.document.createElement("link");b.rel="stylesheet";b.href=rt+"/wwa_classic.css";c.document.getElementsByTagName("head")[0].appendChild(b);c=c.document.getElementsByTagName("applet");if(0<c.length)for(b=0;b<c.length;b++)isWWA(c[b])&&replaceApplet(c[b])}function isWWA(c){return"WWA.class"===c.getAttribute("code")||"WWAX.class"===c.getAttribute("code")}function replaceApplet(c){var b=c.parentElement;b.removeChild(c);var d=document.createElement("div");c=getMapDataFileName(c);d.setAttribute("id","wwa-wrapper");d.classList.add("wwa-size-box");d.setAttribute("data-wwa-mapdata",c);d.setAttribute("data-wwa-loader",rt+"wwaload.js");d.setAttribute("data-wwa-classic-mode-enable",true);c=confirm("URLゲートを有効にしますか?\n(フレームでBGMを再生するWWAではキャンセルを選んでください)");d.setAttribute("data-wwa-urlgate-enable",c);x=confirm("アイテムエフェクトを有効にしますか?(アイテムボックスを何かの表示に使っている作品ではキャンセルをお勧めします)");d.setAttribute("data-wwa-item-effect-enable",x);b.insertBefore(d,b.firstChild);b=document.createElement("script");b.src=rt+"audio/audio.min.js";b.charset="UTF-8";document.getElementsByTagName("head")[0].appendChild(b);b=document.createElement("script");b.src=rt+"wwaload.noworker.js";b.setAttribute("id","wwaloader-ex");b.charset="UTF-8";document.getElementsByTagName("head")[0].appendChild(b);b=document.createElement("script");b.src=rt+"wwa.js";b.charset="UTF-8";document.getElementsByTagName("head")[0].appendChild(b)}function getMapDataFileName(c){for(var b=0;b<c.children.length;b++)if("param"===c.children[b].tagName.toLowerCase()){var d=c.children[b].getAttribute("name"),d=d.toLowerCase();if(null!==d&&"parammapname"===d&&(d=c.children[b].getAttribute("value"),null!==d))return d}throw Error("no mapfile detected.");}void 0;</textarea>
  <h2>2018-10-13 WWAの画像調べるくん</h2>
  <p>あなたのブラウザを、Java版のWWAで使用されている画像のページまでご案内します。移動先のページから右クリックなどで画像ファイルをローカルに保存することができます。使い方はPhoenixと同じです。</p>
  <p>WWAで使用されている画像がすべて表示されてしまうので、ネタバレ等には十分お気をつけください。</p>
  <textarea rows="10" cols="100" readonly="true" onfocus="this.select();">javascript:var rt="https://wwaphoenix.github.io/";if(0<frames.length){for(var i=0;i<frames.length;i++) {try {if(0<frames[i].document.getElementsByTagName("applet").length){var a=confirm(frames[i].location.href+"\nでappletを検出。移動しますか?(移動後再度実行してください)\n");if(!0===a){location.href=frames[i].location.href;break}}}catch(e){}}}main(window);function main(c){var b;c.wwap_mode=!0;c.external_script_inject_mode=!0;c=c.document.getElementsByTagName("applet");if(0<c.length)for(b=0;b<c.length;b++)isWWA(c[b])&&replaceApplet(c[b])}function isWWA(c){return"WWA.class"===c.getAttribute("code")||"WWAX.class"===c.getAttribute("code")}function replaceApplet(c){var b=c.parentElement;b.removeChild(c);b=document.createElement("script");b.src=rt+"wwaload.noworker.js";b.setAttribute("id","wwaloader-ex");b.charset="UTF-8";document.getElementsByTagName("head")[0].appendChild(b);var x=document.createElement("script");x.src=rt+"jump-to-image.js";x.charset="UTF-8";document.getElementsByTagName("head")[0].appendChild(x);var m=getMapDataFileName(c);if(b.readyState==="complete"){window.loader_start({data:{fileName:m}});}else{b.onload=function(){console.log(loader_start);loader_start({data:{fileName:m}});}}}function getMapDataFileName(c){for(var b=0;b<c.children.length;b++)if("param"===c.children[b].tagName.toLowerCase()){var d=c.children[b].getAttribute("name"),d=d.toLowerCase();if(null!==d&&"parammapname"===d&&(d=c.children[b].getAttribute("value"),null!==d))return d}throw Error("no mapfile detected.");}void 0;
 </textarea>
-	<p> &quot;<a href="http://wwawing.com/">WWA Wing</a>&quot; &copy;2013-2020 WWA Wing Team</p>
+ <h2 id="usage">基本的な使い方（ブックマークに保存する場合）</h2>
+ <p class="important">下記はPCのブラウザの利用を前提としています。スマートフォン・タブレットをご利用の場合は、動作しない可能性があります。</p>
+ <h3>1. ブックマークを作成します。</h3>
+ <p>お使いのブラウザで、新規のブックマーク（お気に入り）を追加します。最近のPCのブラウザでは、ブックマークバーはウィンドウ上部のURLや検索を入力する欄の下にあることが多いです。</p>
+
+ <h4>Firefox の場合</h4>
+ <p>ブックマークバーを右クリックして「新しいブックマーク」を選択します。</p>
+ <img src="./images/firefox85-bookmark-1.png" alt="ブックマークに新規追加をします。">
+
+ <h4>Chrome の場合</h4>
+ <p class="important">ブックマークバーが表示されていない場合は、Windows, Linuxの場合はキーボードの「Ctrl + Shift + B」同時押し、Macの場合は「Command + Shift + B」同時押しで表示できます。</p>
+ <p>ブックマークバーを右クリックして「ページを追加」を選択します。</p>
+ <img src="./images/chrome88-bookmark-1.png" alt="ブックマークに新規追加をします。">
+
+ <h3>2. URLにテキストボックスの内容を貼り付け、追加します。</h3>
+ <p>このページのテキストボックスの内容をコピーし、「URL」の欄に貼り付けてください。
+ <p>ブックマークの名前は、わかりやすいものにしておきましょう。画像では「WWA Phoenix」としています。</p>
+ <h4>Firefox の場合</h4>
+ <img src="./images/firefox85-bookmark-2.png" alt="ブックマークのURLにコードを貼り付けます。">
+
+ <h4>Chrome の場合</h4>
+ <img src="./images/chrome88-bookmark-2.png" alt="ブックマークのURLにコードを貼り付けます。">
+
+ <h3>3. ブラウザで、Java版 WWA が設置されているサイトに移動します。</h3>
+ <p> 例: <a href="https://wwajp.com/wwa/java_wwa.html">キャラバンサークルに設置されている、従来のJava版で起動できるゲートワールド</a></p>
+ 
+ <h3>4. 追加したブックマークをクリックなどで選択します。</h3>
+ <p>下図はFirefoxの例ですが、Chromeでもほぼ同様です。</p>
+ <img src="./images/firefox85-bookmark-3.png" alt="追加したブックマークをクリックします">
+
+ <h3>5. いくつかの質問に答えます。</h3>
+ <p>URLゲートを有効にしますか？: 通常は「OK」を選んでください。BGMがあるWWAなどでまともに遊べない場合は、「キャンセル」を押してください。</p>
+ <p>アイテムエフェクトを有効にしますか？: わからなければ「OK」を選んでください。「キャンセル」を押すことでアイテム取得時のアイテムボックス格納時のアニメーションがない、昔の挙動に合わせることもできます。</p>
+
+ <h3>6. 問題なければ、ゲームが起動します。</h3>
+ <p>Enjoy!</p>
+
+	<p> &quot;<a href="http://wwawing.com/">WWA Wing</a>&quot; &copy;2013-2021 WWA Wing Team</p>
         </div>
     </div>
 </body>
