docs: Androidの場合について追記

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div id="wrapper">
         <h1>WWA Phoenix</h1>
         <p class="important">WWA Phoenixは、2019年4月30日をもちまして更新を終了させて頂きました。なお、引き続きご利用になれます。</p>
-        <p class="important">このページの内容は、PCからの利用を前提としています。スマートフォン・タブレットなどでの利用は想定しておりませんのでご注意願います。</p>
+        <p class="important">このページの内容は、原則PCからの利用を前提としています。iOS(iPhone, iPod Touch), iPadOSデバイスは非対応です。 Androidのスマートフォン・タブレットなどでブラウザ利用は <a href="#usage-direct-input">直接コードを貼り付けて起動する場合</a> を御覧ください。</p>
         <p class="important">javascript疑似スキーム(javascript:から始まるアドレスみたいなやつ)からのJavaScript実行を認めていないブラウザ(Safariなど)ではご利用になれません。</p>
 	<h2>WWA Phoenixとは</h2>
 	<p>WWA Phoenixは、Java版WWAを<a href="https://wwawing.com/">WWA Wing</a>に置き換えるブックマークレットです。テキストボックス内の文字列をブックマークのURL欄に打ち込み、ブックマークに追加してください。Java版WWAが設置されているページでブックマークを選択するとWWAが起動します。</p>
@@ -122,6 +122,18 @@
 
  <h3>6. 問題なければ、ゲームが起動します。</h3>
  <p>Enjoy!</p>
+
+ <h2 id="usage-direct-input">直接コードを貼り付けて起動する方法</h2>
+ <p>あまりおすすめの方法ではないですが、ご参考までに紹介します。AndroidのChromeなどをご利用の場合はこちらの方法になるかと思います。</p>
+ <ol>
+		<li>このページのテキストボックスに書かれているコードをコピーします。</li>
+		<li>Java版WWAが設置されているサイトに移動します。</li>
+		<li>URLバーにコードを貼り付けます。</li>
+		<li>カーソルをURLバーの先頭に持っていきます。</li>
+		<li>先頭が「var rt～」から始まっていたら先頭に半角で「javascript:」と書き足します。</li>
+		<li>内容を確定します。</li>
+		<li>うまくいけば起動します。</li>
+ </ol>
 
 	<p> &quot;<a href="http://wwawing.com/">WWA Wing</a>&quot; &copy;2013-2021 WWA Wing Team</p>
         </div>
